# wgpu4k

./: .gitignore  .gitmodules  Dockerfile  KNOWN-ISSUES.md  LICENSE  PREVIEW-TO-BETA-MIGRATION.md  README.md  build.gradle.kts  gradle.properties  jitpack.yml  settings.gradle.kts  specifications.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  publish.yml  publish.yml.unactive  snapshot.yml  test.yml
.run/: run glfw sample.run.xml  run web example.run.xml  run web js example.run.xml  run web wasm example.run.xml
android-jni/: Cargo.toml  android_lib_build.sh  build.sh  buildScript.command  buildScript.sh  init.sh
android-jni-v2/: Cargo.toml  README.MD  android_lib_build.sh
android-jni-v2/Android/app/src/main/java/name/jinleili/wgpu/: MainActivity.kt  RustBridge.kt  WGPUSurfaceView.kt
android-jni-v2/app-surface/: Cargo.toml
android-jni-v2/app-surface/src/: app_surface.rs  lib.rs
android-jni-v2/wgpu-in-app/: Cargo.toml
android-jni-v2/wgpu-in-app/src/: adapter.rs  instance.rs  lib.rs  surface.rs  wgpu_canvas.rs
android-jni-v2/wgpu-in-app/src/examples/: shadow.rs  water.rs
android-jni-v2/wgpu-in-app/src/ffi/: mod.rs
android-jni/android/: build.gradle.kts  local.properties  settings.gradle.kts
android-jni/android/app/: build.gradle  build.gradle.kts
android-jni/android/app/src/androidTest/java/com/example/android/: ExampleInstrumentedTest.java
android-jni/android/app/src/main/: AndroidManifest.xml
android-jni/android/app/src/main/java/com/example/android/: MainActivity.java
android-jni/android/app/src/main/java/io/ygdrasil/: MainActivity.java
android-jni/android/app/src/main/res/layout/: activity_main.xml
android-jni/android/app/src/main/res/values/: strings.xml
android-jni/android/app/src/test/java/com/example/android/: ExampleUnitTest.java
android-jni/android/gradle/wrapper/: gradle-wrapper.properties
android-jni/app-surface/: Cargo.toml
android-jni/app-surface/src/: lib.rs
android-jni/src/: lib.rs  lib_example.rs
android-jni/wgpu-in-app/: Cargo.toml
android-jni/wgpu-in-app/src/examples/: boids.rs  cube.rs  hdr_image_view.rs  mod.rs  msaa_line.rs  page_turning.rs  point_gen.rs  shadow.rs  water.rs
android-jni/wgpu-in-app/src/ffi/: mod.rs
android-native-helper/: build.gradle.kts
buildSrc/: build.gradle.kts  settings.gradle.kts
buildSrc/android/: build.gradle.kts
docker/: Dockerfile  README.md  build.sh  run.sh
examples/SDL2/: build.gradle.kts
examples/android/: build.gradle  build.gradle.kts
examples/common/: build.gradle.kts
examples/compose/: build.gradle.kts
examples/glfw/: build.gradle.kts
examples/headless/: build.gradle.kts
examples/iOS/: build.gradle.kts
examples/macos/: build.gradle.kts
examples/native/: build.gradle.kts
examples/spookyball/: build.gradle.kts
examples/temp/: build.gradle.kts
examples/web-js/: build.gradle.kts
generator/: build.gradle.kts  extra.yml  settings.gradle.kts
gradle/: libs.versions.toml
librococoa/: build.gradle.kts
librococoa/rococoa.xcodeproj/: project.pbxproj
spec-generator/: package-lock.json  package.json  tsconfig.json
spec-generator/src/: Generator.ts  commenter.ts  index.ts  parser.ts  sorter.ts
webgpu-gltf2/: README.md  build.gradle.kts  index.html  package-lock.json  package.json  webpack.config.js
webgpu-gltf2/src/: glb_import.js  glb_viewer.js
webgpu-samples-ts/: .eslintrc.cjs  .prettierrc.cjs  README.md  build.gradle.kts  index.html  package.json  rollup.config.js
webgpu-samples-ts/meshes/: box.ts  mesh.ts  sphere.ts  stanfordDragon.ts  stanfordDragonData.ts  teapot.ts  utils.ts
webgpu-samples-ts/other/: korlibs.d.ts
webgpu-samples-ts/public/: workload-simulator.html
webgpu-samples-ts/sample/: tsconfig.json
webgpu-samples-ts/src/: main.ts  samples.ts  (+2 more)
webgpu-ts/: README.md  extract.sh  package-lock.json  package.json
wgpu4k/: build.gradle.kts
wgpu4k-android-jni/: build.gradle.kts
wgpu4k-e2e/: build.gradle.kts  pom.xml
wgpu4k-glfw-native/: build.gradle.kts
wgpu4k-jvm-panama/: build.gradle.kts
wgpu4k-native/: build.gradle.kts
wgpu4k-scenes/: build.gradle.kts
wgpu4k-toolkit/: build.gradle.kts
(+1971 files in other folders)
