[workspace]
resolver = "2"
members = ["wgpu-in-app", "app-surface"]
default-members = ["wgpu-in-app"]

[workspace.dependencies]
bytemuck = { version = "1.16", features = ["derive"] }
cfg-if = "1.0"
glam = "0.28"
log = "0.4"
noise = { version = "0.8", default-features = false }
pollster = "0.3"
rand = "0.7.2"
wgpu = "22.1"

winit = { version = "=0.30.2" }
web-time = "1"
raw-window-handle = "0.6"
env_logger = "0.11"

# android target
android_logger = "0.14"
jni = "0.21"
jni_fn = "0.1"
ndk-sys = "0.6"
ash = "0.38"
