[workspace]
resolver = "2"
members = ["wgpu-in-app"]
default-members = ["wgpu-in-app"]

[workspace.dependencies]
bytemuck = { version = "1.16", features = ["derive"] }
cfg-if = "1.0"
log = "0.4"
pollster = "0.3"
winit = { version = "=0.30.2" }
web-time = "1"
raw-window-handle = "0.6"
env_logger = "0.11"
wgpu-native = {path = "../wgpu-native" }

# android target
android_logger = "0.14"
jni = "0.21"
jni_fn = "0.1"
ndk-sys = "0.6"
ash = "0.38"


