[package]
# Underscore because the cargo-ndk gradle plugin doesn't transform a hyphen to it.
name = "wgpu4k"
version = "0.0.1"
authors = ["Alexandre Mommers"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "symbols"

[dependencies]

android_logger = "0.14.1"

jni = "0.21.1"
ndk = { version = "0.9.0", features = ["audio"] }
ndk-context = "0.1.1"

# Have to follow Ruffle with this.
wgpu = "0.20.1"

