[package]
name = "wgpu4k"
authors = ["Alexandre Mommers"]
version = "1.1.0"
edition = "2021"
rust-version = "1.76"

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
bytemuck.workspace = true
glam.workspace = true
log.workspace = true
noise.workspace = true
pollster.workspace = true
rand.workspace = true
wgpu-native.workspace = true

#Android
#[target.'cfg(target_os = "android")'.dependencies]
android_logger.workspace = true
jni.workspace = true
jni_fn.workspace = true
log-panics = "*"

