[package]
name = "wgpu4k"
authors = ["Alexandre Mommers"]
version = "1.1.0"
edition = "2021"
rust-version = "1.76"

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
bytemuck.workspace = true
log.workspace = true
pollster.workspace = true
wgpu-native.workspace = true

#Android
#[target.'cfg(target_os = "android")'.dependencies]
android_logger.workspace = true
jni.workspace = true
jni_fn.workspace = true
ndk-sys.workspace = true
log-panics = "*"

